--- a/tp7/src/Estilo/Estilos.css
+++ b/tp7/src/Estilo/Estilos.css
@@ -1,35 +1,52 @@
-.cardMod{
-    text-align: center;
-    border: 3px solid #adc9d2;
-    cursor: pointer;
-    width: 25.9rem;
+#footer {
+    
+    background-color: #282525;
 }
-.imgCard{
-    margin: 0.8rem;
-    width: 23.8rem
+
+.carousel.pointer-event {
+    -ms-touch-action: pan-y;
+    touch-action: pan-y;
 }
-.card:hover{
-    background-color:#adc9d2;
+
+.carousel {
+    position: relative;
 }
+
 .rectangulo{
     width: 100%; 
     height: 15px; 
     background: #adc9d2;
 }
+
+.cardMod{
+    text-align: center;
+    border: 3px solid ;
+    border-color :#adc9d2;
+    cursor: pointer;
+    width: 25.5rem; 
+}
+
+.card:hover{
+    background-color:#adc9d2;
+}
+
 .imgfooter{
     padding-top: 0.8rem;
     padding-bottom: 1rem;
 }
+
 #centrofooter{
     color:white;
     margin-top: 2rem;
     
 }
+
 .foot{
     color: white;
     margin-bottom: 1rem;
     margin-right: 0.5rem;
 }
+
 .celular{
     color:rgb(63, 145, 207);
     -webkit-text-stroke: 0.2px ;
@@ -39,8 +56,4 @@
 #marcas{
     padding-right: 320px;
     padding-left: 320px;
-}
-#footer {
-    
-    background-color: #282525;
 }
